fix(OUT-715) : unnecessary scrollbar in task details page possible fix
- min width of tapwrite (task description) in task details page is kept according to screen width sizes.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,5 +5,17 @@
 }
 
 .tapwrite-details-page {
-  min-height: 75vh;
+  min-height: 45vh;
+}
+
+@media (min-width: 768px) {
+  .tapwrite-details-page {
+    min-height: 55vh;
+  }
+}
+
+@media (min-width: 1200px) {
+  .tapwrite-details-page {
+    min-height: 65vh;
+  }
 }
